<resources>
	<string name="app_name">IT.Ateithe</string>
	<string name="title_activity_main">Τμήμα Μηχανικών Πληροφορικής ΑΤΕΙΘ</string>
	<string name="title_activity_hydra">Υπηρεσίες Ύδρας</string>
	<string name="title_activity_pithia">Υπηρεσίες Πυθίας</string>
	<string name="title_activity_settings">Ρυθμίσεις</string>
	<string name="title_activity_personal_info">Προσωπικές Πληροφορίες</string>
	<string name="title_activity_staff">Προσωπικό</string>
	<string name="title_activity_bus_line">Άφιξη Γραμμής 52</string>
	<string name="title_activity_grades">Βαθμολογίες</string>
	<string name="title_activity_requests">Αιτήσεις</string>
	<string name="title_activity_thesis">Πτυχιακές Εργασίες</string>
	<string name="title_activity_map">Χάρτης ΑΤΕΙΘ</string>
	<string name="title_activity_directions">Οδηγίες</string>
	<string name="title_activity_info">Πληροφορίες</string>
	<string name="title_activity_department">Τμήμα</string>
	<string name="title_activity_support">Υποστήριξη</string>
	<string name="title_activity_photo">Φωτογραφίες</string>
	<string name="title_activity_mail">Ηλεκτρονικό Ταχυδρομείο</string>
	<string name="title_activity_links">Σύνδεσμοι</string>
	<string name="title_activity_about">Σχετικά με την εφαρμογή</string>
	<string name="title_activity_help">Βοήθεια</string>
	<string name="title_activity_bulletin_list">Ανακοινώσεις</string>
	<string name="title_activity_bulletin_detail">Προβολή Ανακοίνωσης</string>
	<string name="title_activity_thesis_detail">Προβολή Πτυχιακής</string>
	<string name="title_activity_mail_detail">Προβολή Μηνύματος</string>
	<string name="title_activity_staff_detail">Πληροφορίες Προσωπικού</string>
	<string name="title_activity_personal_timetable">Το πρόγραμμα μου</string>
	<string name="title_activity_new_mail">Σύνταξη Μηνύματος</string>
	<string name="title_activity_timetable">Πρόγραμμα Εξαμήνου</string>
	<string name="title_activity_course_selection">Επιλογή Μαθημάτων</string>
	<string name="title_activity_downloads">Λήψεις</string>
	<string name="title_activity_request">Αιτήσεις</string>
	<string name="title_activity_erasmus">Erasmus</string>
	<string name="title_activity_master">Μεταπτυχιακές</string>
	<string name="title_activity_bachelor">Προτυχιακές</string>
	<string name="action_about">Σχετικά</string>
	<string name="action_settings">Ρυθμίσεις</string>
	<string name="action_help">Βοήθεια</string>
	<string name="action_compose">Σύνταξη</string>
	<string name="action_empty_trash">Άδειασμα κάδου</string>
	<string name="action_save">Αποθήκευση</string>
	<string name="action_restore">Επαναφορά</string>
	<string name="action_add_attachment">Προσθήκη επισύναψης</string>
	<string name="action_send">Αποστολή</string>
	<string name="hydra_services">Υπηρεσίες Τμήματος</string>
	<string name="hydra_bulletins">Ανακοινώσεις</string>
	<string name="timetable">Πρόγραμμα Εξαμήνου</string>
	<string name="hydra_thesis">Πτυχιακές</string>
	<string name="hydra_staff">Προσωπικό</string>
	<string name="pithia_services">Υπηρεσίες Γραμματείας</string>
	<string name="pithia_grades">Βαθμολογίες</string>
	<string name="pithia_requests">Αιτήσεις</string>
	<string name="pithia_overview">Επισκόπηση Όλων</string>
	<string name="pithia_personal_info">Προσωπικές Πληροφορίες</string>
	<string name="grades_general">Αριθμός περασμένων μαθημάτων :</string>
	<string name="grades_avg">Μ.Ο μαθημάτων:</string>
	<string name="bus_arrival">Άφιξη Γραμμής 52</string>
	<string name="available_labs">Ελεύθερα Εργαστήρια</string>
	<string name="mail">Ηλ. Ταχυδρομείο</string>
	<string name="map">Χάρτης ΑΤΕΙΘ</string>
	<string name="download_attachment">Λήψη Επισύναψης</string>
	<string name="availability">Διαθεσιμότητα</string>
	<string name="pi_general_info">Γενικές Πληροφορίες</string>
	<string name="pi_registration_info">Στοιχεία Εγγραφής</string>
	<string name="pi_address_permanent">Μόνιμη Διεύθυνση</string>
	<string name="pi_address_current">Προσωρινή Διεύθυνση</string>
	<string name="pi_contact_info">Στοιχεία επικοινωνίας</string>
	<string name="pi_username">Όνομα χρήστη:</string>
	<string name="pi_lastname">Επώνυμο:</string>
	<string name="pi_firstname">Όνομα:</string>
	<string name="pi_am">ΑΜ: %1$s</string>
	<string name="pi_department">Τμήμα:</string>
	<string name="pi_semester">Εξάμηνο:</string>
	<string name="pi_program">Πρ. Σπουδών:</string>
	<string name="pi_rate">Δεικ. Προόδου:</string>
	<string name="pi_acad_year">Ακαδ. έτος:</string>
	<string name="pi_period">Περίοδος:</string>
	<string name="pi_reg_mode">Τρ. εγγραφής:</string>
	<string name="pi_address">Διεύθυνση:</string>
	<string name="pi_zip">Ταχ. Κώδικας:</string>
	<string name="pi_city">Πόλη:</string>
	<string name="pi_country">Χώρα:</string>
	<string name="pi_phone1">Τηλέφωνο 1:</string>
	<string name="pi_phone2">Τηλέφωνο 2:</string>
	<string name="pi_email">E-mail:</string>
	<string name="st_lastname">Επώνυμο:</string>
	<string name="st_firstname">Όνομα:</string>
	<string name="pref_accounts">Λογαριασμοί</string>
	<string name="pref_hydra">Υπηρεσίες Τμήματος</string>
	<string name="pref_pithia">Υπηρεσίες Γραμματείας</string>
	<string name="pref_email">Πρόσθετες Υπηρεσίες</string>
	<string name="pref_hydra_msg">Σύνδεση με τις υπηρεσίες του server hydra όπως οι ανακοινώσεις</string>
	<string name="pref_pithia_msg">Σύνδεση με τις υπηρεσίες του server pithia όπως οι βαθμολογίες</string>
	<string name="pref_mail_msg">Σύνδεση με τις υπηρεσίες του server aetos όπως το ηλ. ταχυδρομείο</string>
	<string name="pref_notifications">Ανακοινώσεις</string>
	<string name="pref_notifications_activate">Έλεγχος για νέες ανακοινώσεις</string>
	<string name="pref_notifications_activate_msg">Ενεργοποίηση αυτόματου ελέγχου</string>
	<string name="pref_notifications_max">Αριθμός ανακοινώσεων</string>
	<string name="pref_notifications_max_msg">Ορίστε τον μέγιστο αριθμό των ανακοινώσεων που θα εμφανίζονται</string>
	<string name="pref_notifications_max_dialogmsg">Επιλέξτε το μέγιστο αριθμό των ανακοινώσεων που θα εμφανίζονται.\n\n(0 για εμφάνιση όλων)</string>
	<string name="pref_interval">Χρονικό διάστημα</string>
	<string name="pref_interval_msg">Ορίστε κάθε πότε θα γίνεται έλεγχος</string>
	<string name="pref_other">Άλλες ρυθμίσεις</string>
	<string name="pref_download_dir">Κατάλογος Λήψεων</string>
	<string name="pref_download_dir_msg">Ορίστε τον κατάλογο στον οποίο θα αποθηκεύονται τα ληφθέντα αρχεία</string>
	<string name="pref_course_sel">Επιλογή Μαθημάτων</string>
	<string name="pref_course_sel_msg">Επιλέξτε τα μαθήματα που έχετε δηλώσει αυτό το εξάμηνο ώστε να ενημερωθεί το προσωπικό σας
		πρόγραμμα</string>
	<string name="sender_">Αποστολέας:</string>
	<string name="subject_">Θέμα:</string>
	<string name="date_">Ημερομηνία:</string>
	<string name="to">Προς</string>
	<string name="cc">Κοινοποίηση</string>
	<string name="bcc">Κρυφή Κοινοποίηση</string>
	<string name="subject">Θέμα</string>
	<string name="message">Μήνυμα</string>
	<string name="send">Αποστολή</string>
	<string name="CC">CC</string>
	<string name="BCC">BCC</string>
	<string name="mail_sent">Το μήνυμα στάλθηκε επιτυχώς.</string>
	<string name="file_added">Το αρχείο προστέθηκε επιτυχώς.</string>
	<string name="file_too_big">Το αρχείο είναι μεγαλύτερο από 2mb</string>
	<string name="no_subject">- Χωρίς Θέμα -</string>
	<string name="empty_trash_success">Η διαγραφή ολοκληρώθηκε επιτυχώς</string>
	<string name="empty_trash_fail">Η διαγραφή απέτυχε</string>
	<string name="empty_trash_notice">Θα διαγραφούν όλα τα μηνύματα. Θέλετε να συνεχίσετε;</string>
	<string name="empty_trash_positive">ΔΙΑΓΡΑΦΗ</string>
	<string name="empty_trash_negative">ΑΚΥΡΩΣΗ</string>
	<string name="search">Αναζήτηση</string>
	<string name="select_markers">Επιλογή σημάνσεων</string>
	<string name="select_tags">Επιλογή tags</string>
	<string name="avail_selection">Επιλογή διαθέσιμων</string>
	<string name="departments">Τμήματα</string>
	<string name="download_start">Έναρξη λήψης</string>
	<string name="downloading">Γίνεται λήψη</string>
	<string name="download_complete">Η λήψη ολοκληρώθηκε</string>
	<string name="download_failed">Η λήψη απέτυχε</string>
	<string name="ok">OK</string>
	<string name="cancel">Άκυρο</string>
	<string name="yes">Ναι</string>
	<string name="folders">Φάκελοι</string>
	<string name="no">Όχι</string>
	<string name="continue_">Συνέχεια</string>
	<string name="quoting">Quoting</string>
	<string name="total_dm">Σύνολο Δ.Μ:</string>
	<string name="latest_grades">Τελευταίες Βαθμολογίες</string>
	<string name="announcements">Ανακοινώσεις</string>
	<string name="retry">Επανάληψη</string>
	<string name="five_last_bulletins">Τελευταίες 5 ανακοινώσεις</string>
	<string name="last_updated">Τελ. ενημέρωση: %1$s</string>
	<string name="name_">Όνομα</string>
	<string name="lastname">Επώνυμο</string>
	<string name="department">Τμήμα</string>
	<string name="program">Προγ. Σπουδών</string>
	<string name="select_board">Επιλέξτε πίνακα</string>
	<string name="download_attach">Λήψη επισύναψης</string>
	<string name="downloads">Λήψεις</string>
	<string name="my_timetable">Το πρόγραμμα μου</string>
	<string name="attachment">Επισύναψη</string>
	<string name="attachments">Συνημμένα</string>
	<string name="noti_new_bulletins">Υπάρχουν %1$s νέες ανακοινώσεις.</string>
	<string name="wrong_account_param">Μη έγκυρη παράμετρος λογαριασμού</string>
	<string name="share">Κοινοποίηση</string>
	<string name="tools">Εργαλεία</string>
	<string name="bulletin_check">Έλεγχος για νέες Ανακοινώσεις</string>
	<string name="hydra">Ύδρα</string>
	<string name="pithia">Πυθία</string>
	<string name="save_success">Η αποθήκευση ολοκληρώθηκε επιτυχώς</string>
	<string name="save_fail">Η αποθήκευση απέτυχε</string>
	<string name="staff_info">Πληροφορίες Προσωπικού</string>
	<string name="roles">Ρόλοι:</string>
	<string name="office_number">Τηλ. Γραφείου:</string>
	<string name="email">E-mail:</string>
	<string name="teaches">Διδάσκει:</string>
	<string name="webpage">Ιστοσελίδα:</string>
	<string name="title">Τίτλος:</string>
	<string name="submitted">Υποβλήθηκε:</string>
	<string name="teacher">Διδάσκων:</string>
	<string name="tags_">Tags:</string>
	<string name="availiable">Διαθέσιμη:</string>
	<string name="completed">Ολοκληρωμένη:</string>
	<string name="summary">Σύνοψη:</string>
	<string name="thesis_detail">Προβολή πτυχιακής</string>
	<string name="doc_download">Λήψη εγγράφου πτυχιακής</string>
	<string name="home">Αρχική</string>
	<string name="about">Σχετικά</string>
	<string name="help">Βοήθεια</string>
	<string name="play">Αναπαραγωγή</string>
	<string name="pause">Παύση</string>
	<string name="no_passed_courses">Σύνολο περασμένων μαθημάτων: </string>
	<string name="avg_semester">Μ.Ο περασμένων μαθημάτων: </string>
	<string name="markers">Τοποθεσίες</string>
	<string name="directions">Πλοήγηση</string>
	<string name="settings">Ρυθμίσεις</string>
	<string name="tt_room">Αίθ: (%1$s)</string>
	<string name="info">Πληροφορίες</string>
	<string name="tags">Tags</string>
	<string name="support">Υποστήριξη</string>
	<string name="photos">Φωτογραφίες</string>
	<string name="links">Σύνδεσμοι</string>
	<string name="logo"
			translatable="false">logo</string>
	<string name="tt1">8 – 9</string>
	<string name="tt2">9 – 10</string>
	<string name="tt3">10 – 11</string>
	<string name="tt4">11 – 12</string>
	<string name="tt5">12 – 13</string>
	<string name="tt6">13 – 14</string>
	<string name="tt7">14 – 15</string>
	<string name="tt8">15 – 16</string>
	<string name="tt9">16 – 17</string>
	<string name="tt10">17 – 18</string>
	<string name="tt11">18 – 19</string>
	<string name="tt12">19 – 20</string>
	<string name="forward">Προώθηση</string>
	<string name="reply">Απάντηση</string>
	<string name="move_to">Μετακίνηση σε</string>
	<string name="delete">Διαγραφή</string>
	<string name="show_html">Προβολή HTML</string>
	<string name="studies">Σπουδές</string>
	<string name="erasmus">Erasmus</string>
	<string name="master">Μεταπτυχιακές</string>
	<string name="bachelor">Προτυχιακές</string>
</resources>